--- a/samples/BlectronSample/wwwroot/index.html
+++ b/samples/BlectronSample/wwwroot/index.html
@@ -11,6 +11,6 @@
 <body>
     <app>Loading...</app>
 
-    <script src="../bin/Debug/netcoreapp2.1/dist/_content/Microsoft.AspNetCore.Blazor.Electron/blazor.electron.js"></script>
+    <script src="../bin/Debug/netcoreapp2.1/dist/_content/Blazor.Electron/blazor.electron.js"></script>
 </body>
 </html>
