Update to Components (3.0.0 preview 3)

--- a/samples/BlectronSample/wwwroot/index.html
+++ b/samples/BlectronSample/wwwroot/index.html
@@ -11,6 +11,6 @@
 <body>
     <app>Loading...</app>
 
-    <script src="../bin/Debug/netcoreapp2.1/dist/_content/BlazorElectron/blazor.electron.js"></script>
+    <script src="../bin/Debug/netcoreapp3.0/blazor.electron.js"></script>
 </body>
 </html>
