Fix content files paths in package

--- a/samples/ComponentsElectronSample/wwwroot/index.html
+++ b/samples/ComponentsElectronSample/wwwroot/index.html
@@ -11,6 +11,6 @@
 <body>
     <app>Loading...</app>
 
-    <script src="../bin/Debug/netcoreapp3.0/components.electron.js"></script>
+    <script src="../bin/Debug/netcoreapp3.0/js/components.electron.js"></script>
 </body>
 </html>
